// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hookScript should match snapshot (OS X/Linux) 1`] = `
"#!/bin/sh
# husky
# v1.0.0-rc.10 darwin

scriptPath=\\"node_modules/husky/lib/runner/bin.js\\"
hookName=\`basename \\"$0\\"\`
gitParams=\\"$*\\"

if [ -f $scriptPath ]; then
  node_modules/run-node/run-node $scriptPath $hookName \\"$gitParams\\"
else
  echo \\"Can't find husky, skipping $hookName hook\\"
  echo \\"You can reinstall it using 'npm install husky --save-dev' or delete this hook\\"
fi
"
`;

exports[`hookScript should match snapshot (Windows) 1`] = `
"#!/bin/sh
# husky
# v1.0.0-rc.10 win32

scriptPath=\\"node_modules/husky/lib/runner/bin.js\\"
hookName=\`basename \\"$0\\"\`
gitParams=\\"$*\\"

if [ -f $scriptPath ]; then
  node $scriptPath $hookName \\"$gitParams\\"
else
  echo \\"Can't find husky, skipping $hookName hook\\"
  echo \\"You can reinstall it using 'npm install husky --save-dev' or delete this hook\\"
fi
"
`;
